# intro-to-algorithmic-trading-py

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yaml  hello.py  pyproject.toml
bot-operator/: Dockerfile  Makefile  main.py  models.py  operator_service.py  pyproject.toml  requirements.txt
bot-operator/src/: logger_utils.py  models.py  observer.py  strategies.py
bot-operator/tests/: test_models.py
place-orders/: Dockerfile  main.py  models.py  place_orders_service.py  pyproject.toml  requirements.txt
price-watch/: Dockerfile  Makefile  logger_utils.py  main.py  models.py  price_service.py  pyproject.toml  requirements.txt
trade-watch/: Dockerfile  Makefile  models.py  pyproject.toml  requirements.txt  trades_service.py
