[project]
name = "bot-operator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.3",
    "colorlog>=6.8.2",
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.386",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
