[project]
name = "price-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.3",
    "ccxt>=4.4.24",
    "colorlog>=6.8.2",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.386",
    "ruff>=0.7.1",
]
